--- a/LookARound/Podfile
+++ b/LookARound/Podfile
@@ -10,6 +10,9 @@ target 'LookARound' do
   pod 'BDBOAuth1Manager'
   pod 'MBProgressHUD'
   pod 'SwiftyJSON'
+  # pod 'FacebookCore'  ## Waiting until FB pushes Swift 4 fix
+  # pod 'FacebookLogin' ## Waiting until FB pushes Swift 4 fix
+  # pod 'Mapbox-iOS-SDK', '~> 3.6'
   # pod 'FLEX', '~> 2.0', :configurations => ['Debug']
 
 end
