--- a/LookARound/Info.plist
+++ b/LookARound/Info.plist
@@ -46,5 +46,27 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+    <key>CFBundleURLTypes</key>
+    <array>
+        <dict>
+            <key>CFBundleURLSchemes</key>
+            <array>
+                <string>fb527786687576087</string>
+            </array>
+        </dict>
+    </array>
+    <key>FacebookAppID</key>
+    <string>527786687576087</string>
+    <key>FacebookDisplayName</key>
+    <string>LookARound</string>
+    <key>LSApplicationQueriesSchemes</key>
+    <array>
+        <string>fbapi</string>
+        <string>fb-messenger-api</string>
+        <string>fbauth2</string>
+        <string>fbshareextension</string>
+    </array>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>LookARound needs to access your photo library.</string>
 </dict>
 </plist>
